traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:22: error: ';' expected but 'else' found.
  else return false
  ^Snake:25: error: expected class or object definition
def pasDeSerpent(){
^Snake:43: error: Unmatched closing brace '}' ignored here
}
^